# django-handy-utils

./: .gitignore  README.md  publish_package.sh  pyproject.toml  setup.py
django_handy_utils/: celery.py  db.py  misc.py  permissions.py  serialize.py
django_handy_utils/models/: mixins.py
django_handy_utils/views/: __init__.py  errors.py
