[tool.poetry]
name = "django-handy-utils"
version = "1.1.4"
description = "Handy utilities for working on Django projects"
authors = ["Marc Ford <mrfxyz567@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mfdeux/django-handy-utils"
packages = [{ include = "django_handy_utils" }]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=2"
djangorestframework = ">=3"
pandas = { version = "^1.1", optional = true }
numpy = { version = "^1.19", optional = true }

[tool.poetry.extras]
datasci = ["pandas", "numpy"]

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.3.0"
pytest = "^6.0.1"

[tool.black]
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
